--- a/index.htm
+++ b/index.htm
@@ -2,10 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nine-Five</title>
 </head>
 <body>
   <h1>Nine-Five</h1>
   Since 2014-05-01 by <a href="mailto:NineFiveTeam@gmail.com">Nine-Five</a>
+
+  <ul>
+  	<li><a href="app/kanban/kanban.htm">Kanban</a></li>
+  </ul>
 </body>
 </html>
