--- a/app/kanban/kanban.htm
+++ b/app/kanban/kanban.htm
@@ -8,24 +8,27 @@
 
   <!-- Bootstrap -->
   <link href="../../libs/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-  <link href="kanban.css" rel="stylesheet">
+  <link href="../../libs/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../css/kanban.css" rel="stylesheet">
 </head>
 <body>
-  <div class="top">Top</div>
-  <div class="board">
+  <div class="top">
+    <i class="fa fa-home fa-2x">Draft</i>
+  </div>
+  <div class="kb">
     <div class="group">
-      <div class="header"><h2>Thinking</h2></div>
+      <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
       <div class="cards">
-        <div class="card">搭建源码服务器</div>
-        <div class="card" draggable="true">注册域名</div>
+        <div class="card"><i class="fa fa-square-o"></i>搭建源码服务器</div>
+        <div class="card" draggable="true"><i class="fa fa-check-square-o"></i>注册域名</div>
         <div class="card">看板页面简易版</div>
       </div>
     </div>
     <div class="group">
       <div class="header"><h2>Doing</h2></div>
       <div class="cards">
-        <div class="card">Task21</div>
-        <div class="card">Task22</div>
+        <div class="card"><i class="fa fa-check-square"></i>Task21</div>
+        <div class="card"><i class="fa fa-square"></i>Task22</div>
       </div>
     </div>
   </div>
