--- a/app/kanban/kanban.htm
+++ b/app/kanban/kanban.htm
@@ -11,28 +11,47 @@
   <link href="../../libs/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   <link href="../css/kanban.css" rel="stylesheet">
 </head>
-<body>
+<body class="scrollbar vlayout">
   <div class="top">
     <i class="fa fa-home fa-2x">Draft</i>
   </div>
-  <div class="kb">
-    <div class="group">
-      <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa fa-square-o"></i>搭建源码服务器</div>
-        <div class="card" draggable="true"><i class="fa fa-check-square-o"></i>注册域名</div>
-        <div class="card">看板页面简易版</div>
+  <div class="kb flex">
+    <div class="cram hscroll">
+      <div class="group vlayout">
+        <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
+        <div class="cards flex scrollbar">
+          <div class="card"><i class="fa fa-square-o"></i>搭建源码服务器</div>
+          <div class="card" draggable="true"><i class="fa fa-check-square-o"></i>注册域名</div>
+          <div class="card">看板页面简易版</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+        </div>
+        <div class="bottom"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
       </div>
-    </div>
-    <div class="group">
-      <div class="header"><h2>Doing</h2></div>
-      <div class="cards">
-        <div class="card"><i class="fa fa-check-square"></i>Task21</div>
-        <div class="card"><i class="fa fa-square"></i>Task22</div>
+      <div class="group vlayout">
+        <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
+        <div class="cards flex">
+          <div class="card">测试测试测试测试</div>
+          <div class="card">测试测试测试测试</div>
+        </div>
+        <div class="bottom"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
       </div>
     </div>
   </div>
-
   <script src="../../libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="../../libs/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="../../libs/angularjs/1.2.16/angular.min.js"></script>
