--- a/app/kanban/kanban.htm
+++ b/app/kanban/kanban.htm
@@ -12,14 +12,14 @@
   <link href="../css/kanban.css" rel="stylesheet">
 </head>
 <body class="scrollbar vlayout">
-  <div class="top">
+  <div class="top unflex">
     <i class="fa fa-home fa-2x">Draft</i>
   </div>
-  <div class="kb flex">
+  <div class="kb autoflex">
     <div class="cram hscroll">
       <div class="group vlayout">
-        <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
-        <div class="cards flex scrollbar">
+        <div class="header unflex"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
+        <div class="cards autoflex scrollbar">
           <div class="card"><i class="fa fa-square-o"></i>搭建源码服务器</div>
           <div class="card" draggable="true"><i class="fa fa-check-square-o"></i>注册域名</div>
           <div class="card">看板页面简易版</div>
@@ -40,15 +40,15 @@
           <div class="card">测试测试测试测试</div>
           <div class="card">测试测试测试测试</div>
         </div>
-        <div class="bottom"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
+        <div class="bottom unflex"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
       </div>
       <div class="group vlayout">
-        <div class="header"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
-        <div class="cards flex">
+        <div class="header unflex"><h2><i class="fa fa-lock"></i> Thinking</h2></div>
+        <div class="cards autoflex">
           <div class="card">测试测试测试测试</div>
           <div class="card">测试测试测试测试</div>
         </div>
-        <div class="bottom"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
+        <div class="bottom unflex"><a href="#"><i class="fa fa-plus"></i> 新建任务</a></div>
       </div>
     </div>
   </div>
