--- a/app/test/flexbox-h-multi.htm
+++ b/app/test/flexbox-h-multi.htm
@@ -11,6 +11,13 @@
       background-color: black;
       color: white;
     }
+    .top{
+      margin: 40px;
+      padding: 5px 10px;
+      background-color: #000;
+      position: absolute;
+      bottom: 0;
+    }
 
     .fc{
       /* standard: IE11+, Firefox29+, Chrome34+ */
@@ -21,7 +28,7 @@
       align-items: flex-start;
 
       width: 100%;
-      height: 200px;
+      height: 100%;
       overflow-x: auto;
       overflow-y: hidden;
       background-color: #2b2b2b;
@@ -31,16 +38,16 @@
       align-self: stretch;
       /*宽度固定不伸缩*/
       flex: none;
-      width: 100px;
-      margin: 0 10px;
+      width: 200px;
+      margin: 10px;
       background-color: #666;
     }
   </style>
 </head>
 <body>
-<div>点击此<button>Add</button>按钮在水平方向添加新项目，查看滚动条的情况<br/></div>
+<div class="top">点击此<button>+</button>按钮在水平方向添加新项目，查看滚动条的情况<br/></div>
 <div class="fc">
-  <div class="fi">项目1</div>
+  <div class="fi">项目1 项目1 项目1 项目1 项目1 项目1 项目1 项目1</div>
   <div class="fi">项目2</div>
   <div class="fi">项目3</div>
 </div>
